shifting solve button

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -155,7 +155,7 @@ a {
 }
 
 .center.bar .button-bar > .button, .center.bar .buttons > .button {
-    margin-left: 103px;
+    margin-left: 90px;
 }
 
 .contentarea .buttons a:active {
